# ai-trip-planner-agent

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  vercel.json
apps/api/api/: index.py
apps/api/src/: __init__.py  main.py
apps/api/src/agents/: budget_estimator.py  critic.py  final_response.py  intent_parser.py  itinerary_builder.py  repair.py  research_planner.py  validator.py
apps/api/src/core/: config.py  exceptions.py  logging.py  security.py
apps/api/src/db/: models.py  repositories.py  session.py
apps/api/src/graph/: checkpoints.py  state.py  trip_graph.py
apps/api/src/memory/: preference_store.py  vector_store.py
apps/api/src/observability/: metrics.py  tracing.py
apps/api/src/prompts/: critic.md  final_response.md  intent_parser.md  itinerary_builder.md  repair.md  research_planner.md  validator.md
apps/api/src/schemas/: budget.py  common.py  event.py  flight.py  hotel.py  place.py  route.py  trip.py  user.py
apps/api/src/services/: booking_link_service.py  cache_service.py  provider_registry.py  provider_result_normalizer.py  streaming_service.py  trip_service.py
apps/api/src/tests/: test_api.py  test_budget_validator.py  test_intent_parser.py  test_mock_providers.py
apps/api/src/tools/: base.py  currency.py  events.py  flights.py  hotels.py  places.py  restaurants.py  routing.py  weather.py  web_search.py
apps/api/src/workers/: celery_app.py  trip_tasks.py
docs/: AGENT_DESIGN.md  (+6 more)
(+90 files in other folders)
