[project]
name = "ai-trip-planner-api"
version = "0.1.0"
description = "FastAPI and LangGraph backend for the AI Trip Planner Agent"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn[standard]>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.1",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "asyncpg>=0.30.0",
  "redis>=5.2.1",
  "celery>=5.4.0",
  "langgraph>=0.2.60",
  "langchain-core>=0.3.29",
  "langchain-openai>=0.2.14",
  "openai>=1.58.1",
  "python-dotenv>=1.0.1",
  "httpx>=0.28.1",
  "email-validator>=2.2.0",
  "structlog>=24.4.0",
  "opentelemetry-api>=1.29.0",
  "opentelemetry-sdk>=1.29.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["src/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
